Fix LocalizationPicker z-index

--- a/styles/LanguagePicker.sass
+++ b/styles/LanguagePicker.sass
@@ -1,4 +1,5 @@
 div.LanguagePicker
+    position: relative
     margin: auto
     width: 100%
     height: 0.4in
